<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:id="@+id/sms_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/text_sms"/>
    <EditText
        android:id="@+id/sms_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:phoneNumber="true"
        android:singleLine="true"
        android:focusable="true"
        android:hint="@string/text_number"/>
    <EditText
        android:id="@+id/send_msg"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="top"
        android:textStyle="bold"
        android:textSize="24dp"
        android:singleLine="false"
        android:background="#efe5e5"
        android:hint="@string/send_msg"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="8"
        android:scrollbars="vertical"
        android:enabled="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/take_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="24dp"
            android:background="#5cef7c"
            android:text="@string/phone_bt"/>
        <Button
            android:id="@+id/send_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="24dp"
            android:background="#ecea65"
            android:text="@string/send_sms"/>
    </LinearLayout>

</LinearLayout>
