<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="2dp">

    <ImageView
        android:id="@+id/list_item_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@drawable/android"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="@color/white_80"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-30dp"
            android:hint="@string/text_name"
            android:textAlignment="center"
            android:textColor="@color/black_80"
            android:textSize="18sp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/list_item_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/text_content"
                android:textAlignment="center"
                android:textColor="@color/orange_trans"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_item_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/list_item_text"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/text_onwer"
                android:textColor="@color/black_80"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/list_item_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/list_item_text"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/list_item_owner"
                android:gravity="center"
                android:hint="@string/text_grade"
                android:textColor="@color/black_80"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/list_item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/list_item_owner"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/text_time"
                android:textAlignment="center"
                android:textColor="@color/black_80"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/list_item_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/list_item_owner"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/list_item_time"
                android:gravity="center"
                android:hint="@string/text_type"
                android:textAlignment="center"
                android:textColor="@color/black_80"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/list_item_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/list_item_owner"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/list_item_type"
                android:gravity="center"
                android:hint="@string/text_other"
                android:textAlignment="center"
                android:textColor="@color/black_80"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>