<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/picinfo_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="@dimen/default_small_padding"
            android:src="@drawable/search_back"
            android:tint="@color/gray_20" />
    </LinearLayout>
    <ImageView
        android:id="@+id/item_chat_image"
        android:layout_width="wrap_content"
        android:layout_height="386dp"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/item_chat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:hint="@string/text_title"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_chat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/text_content"
                android:textAlignment="center"
                android:textColor="@color/orange_trans"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_chat_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/item_chat_text"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/text_onwer_bot"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/item_chat_owner_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_chat_text"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/item_chat_owner"
                android:gravity="center"
                android:hint="@string/text_grade"
                android:textColor="@color/orange_trans"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/item_chat_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_chat_text"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/item_chat_owner_text"
                android:gravity="center"
                android:hint="@string/text_grade_bot"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_chat_grade_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_chat_text"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/item_chat_grade"
                android:gravity="center"
                android:hint="@string/text_grade"
                android:textAlignment="center"
                android:textColor="@color/orange_trans"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_chat_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_chat_text"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/item_chat_grade_text"
                android:gravity="center"
                android:hint="@string/text_time_bot"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_chat_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_chat_text"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/item_chat_time"
                android:gravity="center"
                android:hint="@string/text_time"
                android:textAlignment="center"
                android:textColor="@color/orange_trans"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_chat_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/item_chat_owner"
                android:gravity="center"
                android:hint="@string/text_type_bot"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/item_chat_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_chat_owner"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/item_chat_type"
                android:gravity="center"
                android:hint="@string/text_type"
                android:textAlignment="center"
                android:textColor="@color/orange_trans"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/item_chat_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_chat_owner"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/item_chat_type_text"
                android:gravity="center"
                android:hint="@string/text_other"
                android:textAlignment="center"
                android:textColor="@color/white_30"
                android:textStyle="bold"
                android:textSize="18sp" />
            <View
                android:id="@+id/out_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_alpha_30"
                android:layout_below="@id/item_chat_other"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/out_view"/>
            <TextView
                android:id="@+id/chat_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/out_view"
                android:layout_above="@+id/foot"
                android:hint="@string/load_more_no_text"/>
            <LinearLayout
                android:id="@+id/foot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="7"
                android:layout_alignParentBottom="true">
                <EditText
                    android:id="@+id/chat_edit_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/send_sms"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>