<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_game_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/game_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/b"/>
        <LinearLayout
            android:id="@+id/top_linearlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/game_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_test"/>
            <TextView
                android:id="@+id/game_factory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123"/>

            <TextView
                android:id="@+id/game_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="233"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/center_lines"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_lines">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diplay_game" />

        <TextView
            android:id="@+id/game_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/game_door" />
    </RelativeLayout>

    <TextView
        android:id="@+id/game_display_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="6"
        android:text="@string/feedback_message" />
</LinearLayout>