<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/listinfo_item_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@drawable/android"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listinfo_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-30dp"
            android:hint="@string/text_id"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/listinfo_item_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/text_content"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/listinfo_item_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/listinfo_item_info"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/text_onwer"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/listinfo_item_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listinfo_item_info"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/listinfo_item_owner"
                android:gravity="center"
                android:hint="@string/text_grade"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/listinfo_item_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listinfo_item_info"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/listinfo_item_class"
                android:gravity="center"
                android:hint="@string/text_time"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/listinfo_item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listinfo_item_num"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/listinfo_item_owner"
                android:gravity="center"
                android:hint="@string/text_time"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>